2006-04-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term_api.h src/term.c (newpath closepath) term/README:
	Define a new terminal entry point term->path(foo), and wrapper routines
	newpath() == term->path(0);  closepath == term->path(1).
	These are needed to ensure smooth line joins at the ends of a closed
	path in PostScript-like	terminals.

	* src/graph3d.c (do_3dplot draw_3d_graphbox) 
	* src/graphics.c (do_plot plot_boxes plot_cbars do_key_sample)
	* src/graphics.c (plot_border) src/color.c (draw_color_smooth_box):
	Enclose the vector commands that draw rectangles with a
	newpath()...closepath() pair. This guarantees a smooth join for the
	plot boundary, the key box, colorbox, boxes, and candlesticks.

2006-04-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (gpXLoadQueryFont): When trying to load a multibyte
	fontset, treat "missing charsets" as a non-fatal warning.  This seems
	necessary in order to handle en_US.UTF-8 and similar locales, which
	claim to require many exotic but trivial charsets.  Normally these are
	not needed, so it should not be a fatal error if they are missing.
	Bug #1458525

	* term/x11.trm: Increase maximum allowed length of font names.

2006-04-04  Ethan A Merritt  <merritt@u.washington.edu>

	* misc.c (lp_use_properties lp_parse): In "set style increment user"
	mode, an explicit linetype should be interpreted as a call for the
	corresponding line style. But if there is none, we should load a
	description of the linetype rather than failing to initialize the
	lp_style_type at all.

2006-03-28  Lars Hecking  <lhecking@users.sourceforge.net>

	* docs/gnuplot.texi: Regenerated after recent documentation updates.

	* term/Makefile.am.in: Add PostScript directory to EXTRA_DIST. Add
	uninstall support. Rename install target to install-data-local (don't
	use automake-generated targets in Makefile.am) and add $(DESTDIR)
	support.

2006-03-28  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
